--- a/index.html
+++ b/index.html
@@ -11,23 +11,15 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+    <nav>
             <!--remove ul li structure for nav element-->
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
+        <a href="#search-engine-optimization">Search Engine Optimization</a> &nbsp;
+        <a href="#online-reputation-management">Online Reputation Management</a> &nbsp;
+        <a href="#social-media-marketing">Social Media Marketing</a>
+    </nav>
     </header>
     <div class="hero"></div>
-    <div class="content">
+    <main>
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -48,7 +40,7 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </main>
     </div>
     <div class="benefits">
         <div class="benefit-lead">
@@ -73,12 +65,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
