finished changing out div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <nav class="nav">
             <!--remove ul li structure for nav element-->
             <a href="#search-engine-optimization">Search Engine Optimization</a> &nbsp;
             <a href="#online-reputation-management">Online Reputation Management</a> &nbsp;
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <div class="hero"></div>
+    <hr class="hero">
     
     <section>
         <!--removed div and replaced it with section and added in alt tags, fixed search anchor-->
